site final (ajout ombrage article) without graphic discount

--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ ARTICLE{
 }
 
 .gant-boxe{
-    border: black outset 2px;
+    box-shadow: 1px 1px 10px black;
     display: flex;
     justify-content: center;
     align-items: flex-end;
